[package]
name = "jargoncli"
version = "0.1.0"
edition = "2021"
description = "View the jargon file in a terminal"
repository = "https://github.com/10maurycy10/jargoncli.git"
homepage = "https://github.com/10maurycy10/jargoncli"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
